Fix message and border radius of notecard when cards are loading in practice session; fix text wrap issue in Deck; make deck nav bar styling responsive; fix pushing left issue for nav bar on small screens; add padding to notecard text; add click on add cards text in practice session to add cards to deck if there are not any

--- a/src/components/Deck/Deck.css
+++ b/src/components/Deck/Deck.css
@@ -9,7 +9,7 @@
 
 .deck-description {
     align-self: start;
-    word-break: break-all;
+    overflow-wrap: break-word;
     display: -webkit-box;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
